wrap canvas element is a container to control its size, add css for sizing and centering, fix randomColorList to append colors that not already in the preset colors

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -319,7 +319,9 @@ input[type="text"]:focus {
 	display: none;
 }
 
-#pollChart {
-	height: 300px;
-	width: 300px;
+.canvas-container {
+	height: 600px;
+	width: 600px;
+	margin: auto;
 }
+
